[package]
name = "ebnf-gen"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser-macros = { git = "https://github.com/MashPlant/lalr1" }
typed-arena = "1.4.1"
rand = "0.7.2"
clap = "2.33"